Fix a problem: update button

--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -11,37 +11,39 @@
   <div><input type="text" name="album" placeholder="Album" id="album" /></div>
   <button>Add</button>
 </form-->
-{{#if isAdmin}}
-  <div class="form-container playList">
-    <form action="/edit/{{_id}}" method="POST" class="form">
-      <h1>Agregar a la lista de reproduccion</h1>
-      <div class="input-container">
-        <input
-          required
-          class="input input-box"
-          type="text"
-          name="song"
-          placeholder="Song name"
-          id="song"
-        />
-      </div>
-      <div class="input-container"><input
-          required
-          class="input input-box"
-          type="text"
-          name="artist"
-          placeholder="Artist"
-          id="artist"
-        /></div>
-      <div class="input-container"><input
-          required
-          class="input input-box"
-          type="text"
-          name="album"
-          placeholder="Album"
-          id="album"
-        /></div>
-      <button class="button">Add</button>
-    </form>
-  </div>
-{{/if}}
+
+<div class="form-container playList">
+  <form action="/update/{{playList._id}}" method="POST" class="form">
+    <h1>Agregar a la lista de reproduccion</h1>
+    <div class="input-container">
+      <input
+        required
+        class="input input-box"
+        type="text"
+        name="song"
+        placeholder="Song name"
+        id="song"
+        value="{{playList.song}}"
+      />
+    </div>
+    <div class="input-container"><input
+        required
+        class="input input-box"
+        type="text"
+        name="artist"
+        placeholder="Artist"
+        id="artist"
+        value="{{playList.artist}}"
+      /></div>
+    <div class="input-container"><input
+        required
+        class="input input-box"
+        type="text"
+        name="album"
+        placeholder="Album"
+        id="album"
+        value="{{playList.album}}"
+      /></div>
+    <button class="button">Add</button>
+  </form>
+</div>
