--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,7 +8,7 @@
      
      <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/login.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     
 </head>
 <body>
@@ -26,6 +26,6 @@
 
    </main>
     <!--JS-->
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
