--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,17 +1,17 @@
 <footer>
-            <a href="index.html" class="nav__logo">
-                <img src="assets/img/audiohaven.svg" alt="">
-                AUDIOHAVEN
-            </a>
-            <div class="social-icons-container">
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-                <a href="" class="social-icon"></a>
-            </div>
-            <ul class="footer-menu-container">
-                <li class="menu-item">Legal</li>
-                <li class="menu-item">Privacity</li>
-                <li class="menu-item">Contact</li>
-            </ul>
-            <span class="copyright">&copy; 2023 AUDIOHAVEN. All rights reserved.</span>
-        </footer>
+  <a href="index.html" class="nav__logo">
+    <img src="/assets/img/audiohaven.svg" alt="" />
+    AUDIOHAVEN
+  </a>
+  <div class="social-icons-container">
+    <a href="https://facebook.com" target="_blank" class="social-icon"></a>
+    <a href="https://instagram.com" target="_blank" class="social-icon"></a>
+    <a href="https://twitter.com" target="_blank" class="social-icon"></a>
+  </div>
+  <ul class="footer-menu-container">
+    <li class="menu-item">Legal</li>
+    <li class="menu-item">Privacity</li>
+    <li class="menu-item">Contact</li>
+  </ul>
+  <span class="copyright">&copy; 2023 AUDIOHAVEN. All rights reserved.</span>
+</footer>
