--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="nav container">
   <a href="/" class="nav__logo">
-    <img src="assets/img/audiohaven.svg" alt="" />
+    <img src="/assets/img/audiohaven.svg" alt="" />
     AUDIOHAVEN
   </a>
 
